--- a/app_client/index.html
+++ b/app_client/index.html
@@ -18,7 +18,7 @@
     display: none !important;
   }
 </style>
-<title>School Portal</title>
+<title>School Result Portal</title>
 </head>
 <body class="ng-cloak" ng-class="myClass.myClass()">
 
